# Studia_JIMP2

./: README.md
lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  main.cpp
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h
lab12/tree/: Tree.cpp  Tree.h  TreeIterators.h  main.cpp
lab12/treeiterators/: TreeIterators.cpp  TreeIterators.h  main.cpp
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/xorcypherbreaker/: XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/smarttree/: SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/geometry/: Point.cpp  Point.h  Square.cpp  Square.h  main.cpp
lab4/netsjson/: SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/netstemplateengine/: CMakeLists.txt  SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab5/matrix/: Matrix.cpp  Matrix.h  main.cpp
lab5/memorychunk/: MemoryChunk.cpp  MemoryChunk.h  main.cpp
lab5/textpool/: TextPool.cpp  TextPool.h  main.cpp
lab7/: CMakeLists.txt
(+43 files in other folders)
